* IMPROVEMENT: Failing test TestPKICertificateToString fixed with corrections made to the expired certificates.
BUGFIX: Made URI schemes case insensitive.
Version 3.19

* FEATURE: Added find function to KSI_List interface.

Version 3.18
* IMPROVEMENT: Function KSI_CTX_getLastFailedSignature is deprecated. See KSI_VERIFICATION_POLICY_EMPTY for replacement.
* BUGFIX: Made URI schemes case insensitive.

Version 3.18

* BUGFIX: Negative enum value is not ISO standard.

2018-08-27 release(3.18.2836)
* FEATURE: High Availability add-on to the non-blocking network interface.
* FEATURE: Added max tree level to tree builder.
* IMPROVEMENT: KSI_DataHash and KSI_DataHasher accept NULL as KSI context.
* IMPROVEMENT: Added KSI_TlvElement_removeElement function.
* IMPROVEMENT: Changed the curl HTTP debug messages for return codes and internal error messages.
* IMPROVEMENT: KSI_DataHash and KSI_DataHasher accept NULL as KSI context.
* IMPROVEMENT: Updated example code in README.md.
* IMPROVEMENT: Added calendar hash chain consistency verification.
* BUGFIX: Corrected possible crash in list removeElement when configured without object free method.
* BUGFIX: Fixed typo in hash algorithm names.
* BUGFIX: Fixed internal logging mechanism.

Version 3.17

2018-02-12 release(3.17.2693)
* IMPROVEMENT: Added KSI_ATTRIB and KSI_UNUSED to annotate functions.
* FEATURE: Added CommonCrypto for hashing as an alternative to OpenSSL.
* IMPROVEMENT: Removed deprecated interface KSI_Signature_getSignerIdentity.
* IMPROVEMENT: Added consistency tests for public include files (make include-test).
* IMPROVEMENT: Moved all implementation h-files into src/ksi/impl directory.
* IMPROVEMENT: Added deprecated and obsolete times to hash functions.
* IMPROVEMENT: SHA-1 is deprecated as of 01.07.2016T00:00 UTC.
* BUGFIX: Removed double close of the KSI_DataHasher when calculating the calendar hash chain.
* IMPROVEMENT: Added double close guards and tests for KSI_DataHasher.